--- a/cashregisterapi.yml
+++ b/cashregisterapi.yml
@@ -1,6 +1,6 @@
 openapi: "3.0.0"
 info:
-  title: Cash Register App
+  title: CashRegisterApi
   description: App for a cash register
   version: 1.0.0
 
